# slco

./: CMakeLists.txt  LICENSE  README.md
examples/generator/: CMakeLists.txt  generator.c
include/slco/: co.h
